--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body{
   background-color: var(--BGColor);
 }
@@ -25,13 +30,26 @@ body{
 
 #imgMuñoz{
   width: 100%;
-  height: auto;
+  height: 100%;
+  position: absolute;
   object-fit: cover;
   object-position: top;
 }
 
 h3{
   font-size: 25px;
+  text-align: center;
+}
+
+#h3opcion{
+  opacity: 0;
+}
+
+#dvText{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px 10px;
 }
 
 #dvBotones{
