--- a/css/style.css
+++ b/css/style.css
@@ -86,3 +86,13 @@ h3{
   width: 150px;
   height: 50px;
 }
+
+#btnEaster{
+  position: absolute;
+  top: 320px;
+  left: 100px;
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  color: transparent;
+}
