--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ body{
   height: 400px;
   border-radius: 15px;
   position: relative;
+  border: 3px solid grey;
 }
 
 #imgMuñoz{
@@ -35,6 +36,14 @@ body{
   position: absolute;
   object-fit: cover;
   object-position: top;
+  display: none;
+}
+
+#videoMuñoz{
+  position: absolute;
+  object-fit: cover;
+  object-position: center;
+  height: 450px;
 }
 
 h3{
