--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,9 @@ body{
   border-radius: 15px;
   position: relative;
   border: 3px solid grey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #imgMuñoz{
@@ -42,8 +45,8 @@ body{
 #videoMuñoz{
   position: absolute;
   object-fit: cover;
-  object-position: center;
-  height: 500px;
+  //object-position: center;
+  height: 450px;
 }
 
 h3{
