--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body{
   height: 400px;
   border-radius: 15px;
   position: relative;
-  border: 3px solid grey;
+  //border: 3px solid grey;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -39,7 +39,7 @@ body{
   position: absolute;
   object-fit: cover;
   object-position: top;
-  display: none;
+  //display: none;
 }
 
 #videoMuñoz{
